// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination create component 1`] = `
<div>
  <ul
    className="el-pagination"
  >
    <PageButton
      disabled={true}
      hidden={false}
      key="start"
      label="首页"
      onClick={[Function]}
      pgBtn={true}
    />
    <PageButton
      disabled={true}
      key="prev"
      label={
        <span>
          <span
            className="el-caret el-left"
          />
          上一页
        </span>
      }
      onClick={[Function]}
      pgBtn={true}
    />
    <PageButton
      disabled={true}
      key="next"
      label={
        <span>
          下一页
          <span
            className="el-caret el-right"
          />
        </span>
      }
      onClick={[Function]}
      pgBtn={true}
    />
    <PageButton
      disabled={false}
      hidden={false}
      key="end"
      label="尾页"
      onClick={[Function]}
      pgBtn={true}
    />
  </ul>
  <span
    className="el-totalPages"
  >
    共 
    0
     页
  </span>
</div>
`;

exports[`Pagination define current & dataSize 1`] = `
<Pagination
  current={2}
  dataSize={50}
  endLabel="尾页"
  hideEndLabel={false}
  hideStartLabel={false}
  nextLabel={
    <span>
      下一页
      <span
        className="el-caret el-right"
      />
    </span>
  }
  onPageChange={[Function]}
  paginationSize={6}
  prevLabel={
    <span>
      <span
        className="el-caret el-left"
      />
      上一页
    </span>
  }
  showTotalPages={true}
  sizePerPage={10}
  startLabel="首页"
>
  <div>
    <ul
      className="el-pagination"
    >
      <PageButton
        disabled={false}
        hidden={false}
        key="start"
        label="首页"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              首页
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={false}
        key="prev"
        label={
          <span>
            <span
              className="el-caret el-left"
            />
            上一页
          </span>
        }
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              <span>
                <span
                  className="el-caret el-left"
                />
                上一页
              </span>
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={false}
        key="1"
        label={1}
        onClick={[Function]}
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              1
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={true}
        key="2"
        label={2}
        onClick={[Function]}
      >
        <li
          className="el-active"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              2
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={false}
        key="3"
        label={3}
        onClick={[Function]}
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              3
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={false}
        key="4"
        label={4}
        onClick={[Function]}
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              4
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={false}
        key="5"
        label={5}
        onClick={[Function]}
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              5
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={false}
        key="next"
        label={
          <span>
            下一页
            <span
              className="el-caret el-right"
            />
          </span>
        }
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              <span>
                下一页
                <span
                  className="el-caret el-right"
                />
              </span>
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={false}
        hidden={false}
        key="end"
        label="尾页"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              尾页
            </span>
          </a>
        </li>
      </PageButton>
    </ul>
    <span
      className="el-totalPages"
    >
      共 
      5
       页
    </span>
  </div>
</Pagination>
`;

exports[`Pagination define hideEndLabel & hideStartLabel 1`] = `
<Pagination
  current={1}
  dataSize={0}
  endLabel="尾页"
  hideEndLabel={true}
  hideStartLabel={true}
  nextLabel={
    <span>
      下一页
      <span
        className="el-caret el-right"
      />
    </span>
  }
  onPageChange={[Function]}
  paginationSize={6}
  prevLabel={
    <span>
      <span
        className="el-caret el-left"
      />
      上一页
    </span>
  }
  showTotalPages={true}
  sizePerPage={10}
  startLabel="首页"
>
  <div>
    <ul
      className="el-pagination"
    >
      <PageButton
        disabled={true}
        hidden={true}
        key="start"
        label="首页"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn el-hidden el-disabled"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              首页
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={true}
        key="prev"
        label={
          <span>
            <span
              className="el-caret el-left"
            />
            上一页
          </span>
        }
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn el-disabled"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              <span>
                <span
                  className="el-caret el-left"
                />
                上一页
              </span>
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={true}
        key="next"
        label={
          <span>
            下一页
            <span
              className="el-caret el-right"
            />
          </span>
        }
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn el-disabled"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              <span>
                下一页
                <span
                  className="el-caret el-right"
                />
              </span>
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={false}
        hidden={true}
        key="end"
        label="尾页"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn el-hidden"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              尾页
            </span>
          </a>
        </li>
      </PageButton>
    </ul>
    <span
      className="el-totalPages"
    >
      共 
      0
       页
    </span>
  </div>
</Pagination>
`;

exports[`Pagination define paginationSize 1`] = `
<Pagination
  current={2}
  dataSize={50}
  endLabel="尾页"
  hideEndLabel={false}
  hideStartLabel={false}
  nextLabel={
    <span>
      下一页
      <span
        className="el-caret el-right"
      />
    </span>
  }
  onPageChange={[Function]}
  paginationSize={5}
  prevLabel={
    <span>
      <span
        className="el-caret el-left"
      />
      上一页
    </span>
  }
  showTotalPages={true}
  sizePerPage={10}
  startLabel="首页"
>
  <div>
    <ul
      className="el-pagination"
    >
      <PageButton
        disabled={false}
        hidden={false}
        key="start"
        label="首页"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              首页
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={false}
        key="prev"
        label={
          <span>
            <span
              className="el-caret el-left"
            />
            上一页
          </span>
        }
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              <span>
                <span
                  className="el-caret el-left"
                />
                上一页
              </span>
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={false}
        key="1"
        label={1}
        onClick={[Function]}
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              1
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={true}
        key="2"
        label={2}
        onClick={[Function]}
      >
        <li
          className="el-active"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              2
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={false}
        key="3"
        label={3}
        onClick={[Function]}
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              3
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={false}
        key="4"
        label={4}
        onClick={[Function]}
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              4
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={false}
        key="5"
        label={5}
        onClick={[Function]}
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              5
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={false}
        key="next"
        label={
          <span>
            下一页
            <span
              className="el-caret el-right"
            />
          </span>
        }
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              <span>
                下一页
                <span
                  className="el-caret el-right"
                />
              </span>
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={false}
        hidden={false}
        key="end"
        label="尾页"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              尾页
            </span>
          </a>
        </li>
      </PageButton>
    </ul>
    <span
      className="el-totalPages"
    >
      共 
      5
       页
    </span>
  </div>
</Pagination>
`;

exports[`Pagination define showTotalPages 1`] = `
<Pagination
  current={1}
  dataSize={0}
  endLabel="尾页"
  hideEndLabel={false}
  hideStartLabel={false}
  nextLabel={
    <span>
      下一页
      <span
        className="el-caret el-right"
      />
    </span>
  }
  onPageChange={[Function]}
  paginationSize={6}
  prevLabel={
    <span>
      <span
        className="el-caret el-left"
      />
      上一页
    </span>
  }
  showTotalPages={false}
  sizePerPage={10}
  startLabel="首页"
>
  <div>
    <ul
      className="el-pagination"
    >
      <PageButton
        disabled={true}
        hidden={false}
        key="start"
        label="首页"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn el-disabled"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              首页
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={true}
        key="prev"
        label={
          <span>
            <span
              className="el-caret el-left"
            />
            上一页
          </span>
        }
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn el-disabled"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              <span>
                <span
                  className="el-caret el-left"
                />
                上一页
              </span>
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={true}
        key="next"
        label={
          <span>
            下一页
            <span
              className="el-caret el-right"
            />
          </span>
        }
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn el-disabled"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              <span>
                下一页
                <span
                  className="el-caret el-right"
                />
              </span>
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={false}
        hidden={false}
        key="end"
        label="尾页"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              尾页
            </span>
          </a>
        </li>
      </PageButton>
    </ul>
  </div>
</Pagination>
`;

exports[`Pagination define sizePerPage 1`] = `
<Pagination
  current={2}
  dataSize={50}
  endLabel="尾页"
  hideEndLabel={false}
  hideStartLabel={false}
  nextLabel={
    <span>
      下一页
      <span
        className="el-caret el-right"
      />
    </span>
  }
  onPageChange={[Function]}
  paginationSize={6}
  prevLabel={
    <span>
      <span
        className="el-caret el-left"
      />
      上一页
    </span>
  }
  showTotalPages={true}
  sizePerPage={5}
  startLabel="首页"
>
  <div>
    <ul
      className="el-pagination"
    >
      <PageButton
        disabled={false}
        hidden={false}
        key="start"
        label="首页"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              首页
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={false}
        key="prev"
        label={
          <span>
            <span
              className="el-caret el-left"
            />
            上一页
          </span>
        }
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              <span>
                <span
                  className="el-caret el-left"
                />
                上一页
              </span>
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={false}
        key="1"
        label={1}
        onClick={[Function]}
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              1
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={true}
        key="2"
        label={2}
        onClick={[Function]}
      >
        <li
          className="el-active"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              2
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={false}
        key="3"
        label={3}
        onClick={[Function]}
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              3
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={false}
        key="4"
        label={4}
        onClick={[Function]}
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              4
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={false}
        key="5"
        label={5}
        onClick={[Function]}
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              5
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        active={false}
        key="6"
        label={6}
        onClick={[Function]}
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              6
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={false}
        key="next"
        label={
          <span>
            下一页
            <span
              className="el-caret el-right"
            />
          </span>
        }
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              <span>
                下一页
                <span
                  className="el-caret el-right"
                />
              </span>
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={false}
        hidden={false}
        key="end"
        label="尾页"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              尾页
            </span>
          </a>
        </li>
      </PageButton>
    </ul>
    <span
      className="el-totalPages"
    >
      共 
      10
       页
    </span>
  </div>
</Pagination>
`;

exports[`Pagination define startLabel prevLabel nextLabel endLabel 1`] = `
<Pagination
  current={1}
  dataSize={0}
  endLabel="4"
  hideEndLabel={false}
  hideStartLabel={false}
  nextLabel="3"
  onPageChange={[Function]}
  paginationSize={6}
  prevLabel="2"
  showTotalPages={true}
  sizePerPage={10}
  startLabel="1"
>
  <div>
    <ul
      className="el-pagination"
    >
      <PageButton
        disabled={true}
        hidden={false}
        key="start"
        label="1"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn el-disabled"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              1
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={true}
        key="prev"
        label="2"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn el-disabled"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              2
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={true}
        key="next"
        label="3"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn el-disabled"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              3
            </span>
          </a>
        </li>
      </PageButton>
      <PageButton
        disabled={false}
        hidden={false}
        key="end"
        label="4"
        onClick={[Function]}
        pgBtn={true}
      >
        <li
          className="el-pg-btn"
        >
          <a
            href="#"
            onClick={[Function]}
          >
            <span>
              4
            </span>
          </a>
        </li>
      </PageButton>
    </ul>
    <span
      className="el-totalPages"
    >
      共 
      0
       页
    </span>
  </div>
</Pagination>
`;
